# 2024W-DLNLP-BERT

./: BERT-finetuning-GLUE-CoLA.ipynb  BERT-finetuning-GLUE-MNLI.ipynb  BERT-finetuning-GLUE-MRPC.ipynb  BERT-finetuning-GLUE-QNLI.ipynb  BERT-finetuning-GLUE-QQP.ipynb  BERT-finetuning-GLUE-RTE.ipynb  BERT-finetuning-GLUE-SST2.ipynb  BERT-finetuning-GLUE-STSB.ipynb  BERT-finetuning-GLUE.ipynb  BERT_SNLI.ipynb  Makefile  README.md  example-experiment.ipynb  requirements.txt
DLNLP-BERT/: LICENSE.txt  README.md  pyproject.toml
DLNLP-BERT/src/dlnlp_BERT/: __about__.py  __init__.py  embedding.py  models.py
DLNLP-BERT/tests/: __init__.py
glue/: BERT-finetuning-GLUE-CoLA.ipynb  BERT-finetuning-GLUE-MNLI.ipynb  BERT-finetuning-GLUE-MRPC.ipynb  BERT-finetuning-GLUE-QNLI.ipynb  BERT-finetuning-GLUE-QQP.ipynb  BERT-finetuning-GLUE-RTE.ipynb  BERT-finetuning-GLUE-SST2.ipynb  BERT-finetuning-GLUE-STSB.ipynb
snli/: BERT_SNLI.ipynb  BERT_base_SNLI.ipynb
squad/: BERT-finetuning-SQuAD-TriviaQA.ipynb  BERT-finetuning-SQuAD.ipynb
swag/: gpt.ipynb  modernbert-large.ipynb  modernbert-xavier.ipynb  swag_bert_base.ipynb  swag_bert_large.ipynb  swag_deberta_base.ipynb  swag_modernbert.ipynb
