[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlnlp-BERT"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Markus Hunner", email = "26381538+markhun@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch==2.5.1"
]

[project.optional-dependencies]
lint = [
  "black",
  "isort"
]



[project.urls]
Documentation = "hhttps://github.com/markhun/2024W-DLNLP-BERT#readme"
Source = "https://github.com/markhun/2024W-DLNLP/dlnlp-BERT"

[tool.hatch.version]
path = "src/dlnlp_BERT/__about__.py"


